--- a/spectrogram_segmentation.ipynb
+++ b/spectrogram_segmentation.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "**[Model Training](#Model-Training):** Configure and train a Deeplabv3 model with a MobileNetV3 backbone.\n",
     "\n",
-    "**[Model Validation](#Model-Validation):** Assess the performance of the model using a suite of common machine learning metrics\n",
+    "**[Model Validation](#Model-Validation):** Assess the performance of the model using a suite of common machine learning metrics.\n",
     "\n",
     "**[Challenge Data](#Challenge-Data):** Challenge the model on combined frames containing both LTE and NR signal.\n",
     "\n",
